Total Time In (hh:mm): 06:34


0.1.0 - UNNAMED - 24/05/2024 @ 14:00 - Time In: 1:00
- Import database
- Pick random song,


0.1.1 - Minimum Viable Product - 26/05/2024 @ 18:33 - Time In: ~00:45
- Constant play loop,
- Put first letters into one string,
- Mark songs correct or incorrect,
- Manage session score,


0.2.0 - GUI Overhaul - 26/05/2024 @ 22:00 - Time In: ~1:15
- Added GUI,
- Added sound effects for correct guesses,


0.2.1 - User Data - 27/05/2024 @ 15:40 - Time In: ~1:30
- Added login page and create account,
- Added saving total score and high session score,

0.2.2 - Workflow Improvements - 27/05/2024 @ 16:41 - Time In: ~00:20
- Made adding new songs easier and quicker,
- Added 10 new songs (for a total of 20),
	- I Was Made For Lovin' You by KISS
	- Iris by The Goo Goo Dolls
	- Something Just Like This by The Chainsmokers
	- End of Beginning by Djo
	- Notion by The Rare Occasions
	- Somewhere Only We Know by Keane
	- Hey Jude by The Beatles
	- Video Games by Lana Del Rey
	- Intro by The xx
	- I'm So Tired by Fugazi (Punctuation Matters)
- Fixed bug where extra blank space was added to each word (i.e "It" was shown as "I _ _" not "I _"),
- Fixed bug where it wouldn't save high scores when just created account,


0.3.0 - Online (Not Really) Leaderboards - 27/05/2024 @ 18:10 - Time In: 1:29
- Added menu bar at top,
- Added show leaderboard for top 5 all time scores in menu,
- Added show leaderboard for top 5 session scores in menu,

0.3.1 - Minor Bug fix - 07/06/2024 @ 19:35 - Time In: 00:15
- Fixed bug where scores wouldn't be recorded when account created,
- Fixed bug where leaderboards wouldn't update until relaunch,

0.4.0 - Audio Update - 08/06/2024 @  - Time In: 
- Fixed spelling of "Starboy" by The Weeknd,